# gpgpu

./: .gitignore  CMakeLists.txt  readme.org
doc/paper/: doc.tex
doc/paper/tmp/: doc.aux  doc.out  doc.toc
etc/profile/: callgrind.out.41103-01
etc/profile/cpu/: callgrind.out.80765-01
etc/profile/gpu/00/: gpgpu-analysis.nvprof
etc/profile/gpu/01/: gpgpu-analysis.nvprof
etc/profile/gpu/02/: gpgpu-analysis.nvprof
src/: kernel.cc  kernel.cu  main.cc  main.cu
src/include/: kernel.cuh  kernel.hh
